--- a/css/style.css
+++ b/css/style.css
@@ -170,7 +170,7 @@ z-index: 1;
     position: relative;
     margin-top: 46px;
     padding-top: 50%;
-    background: url(/W3_TheBand/assets/img/slider/slider1.jpg) top center / cover no-repeat;
+    background: url(ThinhNguyen1211.github.io/img/slider/slider1.jpg) top center / cover no-repeat; 
 }
 
 #slider .text-content {
