--- a/css/style.css
+++ b/css/style.css
@@ -114,10 +114,9 @@ z-index: 1;
 }
 
 #nav .subnav {
-    list-style-type: none;
-    display: none;
-    position: absolute;
+    list-style-type: none;  
     background-color: #fff;
+    position: initial;
     top: 100%;
     min-width: 160px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3)
@@ -170,7 +169,7 @@ z-index: 1;
     position: relative;
     margin-top: 46px;
     padding-top: 50%;
-    background: url(https://thinhnguyen1211.github.io/img/slider/slider1.jpg) top center / cover no-repeat; 
+    background: url(https://thinhnguyen1211.github.io/img/slider/slider1.jpg) top center / cover no-repeat;
 }
 
 #slider .text-content {
