--- a/css/style.css
+++ b/css/style.css
@@ -116,7 +116,8 @@ z-index: 1;
 #nav .subnav {
     list-style-type: none;  
     background-color: #fff;
-    position: initial;
+    position: absolute;
+    display: none;
     top: 100%;
     min-width: 160px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3)
